--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+ <link rel="stylesheet" href="./src/countrie.html"><h1>посилання</h1>
 </body>
 </html>
