--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Countries Search</title>
+  <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
- <link rel="stylesheet" href="./src/countrie.html"><h1>посилання</h1>
+  <div class="container">
+    <input type="text" id="search" placeholder="Search for a country...">
+    <ul id="country-list"></ul>
+  </div>
+  <script src="./src/js/index.js" type="module"></script>
 </body>
 </html>
+
