--- a/src/countrie.html
+++ b/src/countrie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <input type="text" id="search" placeholder="Search for a country...">
+    <input type="text" id="search" placeholder="Search for a country">
     <ul id="country-list"></ul>
   </div>
   <script src="./js/index.js" type="module"></script>
